// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedArc automatically increases the component's height when arcDegree is greater than 180 degrees 1`] = `
{
  "children": [
    <Svg
      height={234.36753236814712}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 66,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 21,
                "filled": 21,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": -45,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 89,
                "filled": 89,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 23,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 157,
                "filled": 157,
                "filledColor": "#00FF00",
                "isComplete": true,
                "start": 91,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Fourth Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 225,
                "filled": 225,
                "filledColor": "#0000FF",
                "isComplete": true,
                "start": 159,
              },
            ],
            "arcsStart": -45,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 225,
              "filled": 225,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 159,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 21,
              "filled": 21,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": -45,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 89,
              "filled": 89,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 23,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 157,
              "filled": 157,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 91,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 225,
              "filled": 225,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 159,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders arc with ranges: shows ranges 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 43.5,
                "filled": 43.5,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 89,
                "filled": 89,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 45.5,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 134.5,
                "filled": 134.5,
                "filledColor": "#00FF00",
                "isComplete": true,
                "start": 91,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Fourth Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 180,
                "filled": 180,
                "filledColor": "#0000FF",
                "isComplete": true,
                "start": 136.5,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [
              "1.25",
              "2.5",
              "3.75",
              "5",
            ],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43.5,
              "filled": 43.5,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 89,
              "filled": 89,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45.5,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 134.5,
              "filled": 134.5,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 91,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            }
          }
        />
        <Cap />
        <RangesDisplay />
      </Context.Provider>
    </Svg>,
    undefined,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders default 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 43.5,
                "filled": 43.5,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 89,
                "filled": 89,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 45.5,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 134.5,
                "filled": 134.5,
                "filledColor": "#00FF00",
                "isComplete": true,
                "start": 91,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Fourth Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 180,
                "filled": 180,
                "filledColor": "#0000FF",
                "isComplete": true,
                "start": 136.5,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43.5,
              "filled": 43.5,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 89,
              "filled": 89,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45.5,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 134.5,
              "filled": 134.5,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 91,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders segments with arc degree scales 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 58.666666666666664,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 88,
                "filled": 88,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 142.8,
                "filled": 142.8,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 90,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 180,
                "filled": 180,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 144.8,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 144.8,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 3,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 142.8,
              "filled": 142.8,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 144.8,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders with ensured arc degree scales when missing from segments 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 58.666666666666664,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 88,
                "filled": 88,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 134,
                "filled": 134,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 90,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 180,
                "filled": 180,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 136,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 136,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 3,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 134,
              "filled": 134,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 136,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders with middle content 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 43.5,
                "filled": 43.5,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 89,
                "filled": 89,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 45.5,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 134.5,
                "filled": 134.5,
                "filledColor": "#00FF00",
                "isComplete": true,
                "start": 91,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Fourth Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 180,
                "filled": 180,
                "filledColor": "#0000FF",
                "isComplete": true,
                "start": 136.5,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43.5,
              "filled": 43.5,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 89,
              "filled": 89,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45.5,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 134.5,
              "filled": 134.5,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 91,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "height": 100,
          "overflow": "hidden",
          "position": "absolute",
          "top": 36,
          "width": 116,
        }
      }
    >
      <Text />
    </View>,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc sets the last segment for lastFilledSegment prop when fillValue is equal or greater than 100% 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "First Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 43.5,
                "filled": 43.5,
                "filledColor": "#FF0000",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Second Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 89,
                "filled": 89,
                "filledColor": "#FFA500",
                "isComplete": true,
                "start": 45.5,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Third Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 134.5,
                "filled": 134.5,
                "filledColor": "#00FF00",
                "isComplete": true,
                "start": 91,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": {
                  "label": "Fourth Segment",
                },
                "emptyColor": "#F2F3F5",
                "end": 180,
                "filled": 180,
                "filledColor": "#0000FF",
                "isComplete": true,
                "start": 136.5,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43.5,
              "filled": 43.5,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 89,
              "filled": 89,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45.5,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 134.5,
              "filled": 134.5,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 91,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 180,
              "filled": 180,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 136.5,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
    false,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc shows warnings and renders the component when segments have invalid scale or arcDegreeScale data 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "alignRangesWithSegments": true,
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 58.666666666666664,
            "arcs": [
              {
                "centerX": 120,
                "centerY": 120,
                "data": undefined,
                "emptyColor": "#F3F3F4",
                "end": 58.666666666666664,
                "filled": 58.666666666666664,
                "filledColor": "#502D91",
                "isComplete": true,
                "start": 0,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": undefined,
                "emptyColor": "#F3F3F4",
                "end": 119.33333333333333,
                "filled": 90.00000000000001,
                "filledColor": "#177CBA",
                "isComplete": false,
                "start": 60.666666666666664,
              },
              {
                "centerX": 120,
                "centerY": 120,
                "data": undefined,
                "emptyColor": "#F3F3F4",
                "end": 180,
                "filled": 121.33333333333333,
                "filledColor": "#CF5625",
                "isComplete": false,
                "start": 121.33333333333333,
              },
            ],
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": undefined,
              "emptyColor": "#F3F3F4",
              "end": 119.33333333333333,
              "filled": 90.00000000000001,
              "filledColor": "#177CBA",
              "isComplete": false,
              "start": 60.666666666666664,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 3,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": undefined,
              "emptyColor": "#F3F3F4",
              "end": 58.666666666666664,
              "filled": 58.666666666666664,
              "filledColor": "#502D91",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": undefined,
              "emptyColor": "#F3F3F4",
              "end": 119.33333333333333,
              "filled": 90.00000000000001,
              "filledColor": "#177CBA",
              "isComplete": false,
              "start": 60.666666666666664,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": undefined,
              "emptyColor": "#F3F3F4",
              "end": 180,
              "filled": 121.33333333333333,
              "filledColor": "#CF5625",
              "isComplete": false,
              "start": 121.33333333333333,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
    <DataErrorRenderer
      style={
        {
          "width": 240,
        }
      }
    />,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;
